--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="fixed">
             <svg id="canvas" width="500" height="500"></svg>
         </div>
+        <div id="tooltip"></div>
 
         <!-- Each div will contain the descriptions-->
         <div id="container">
