--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </p>
             </div>
             <div id="div1">
-                <h2>This class has 30 students</h2>
-                <p>Each black box represents an individual student in our <b>"Intro to Information Visualization"</b> class.</p>
+                <h2>Brown eyes</h2>
+                <p>More than <b>half</b> of the class has brown eyes!</p>
             </div>
             <div id="div2">
                 <h2>Brown eyes</h2>
