Intro and partial paragraph
1. Created intro section and market share image.
2. Fill the paragraph of graph2.
3. Created Reference and credit section at the end.

--- a/index.html
+++ b/index.html
@@ -24,23 +24,34 @@
 
         <!-- Each div will contain the descriptions-->
         <div id="container">
-            <div id="intro">
-                <p>This is introduction to PC game platforms - what it is, what platforms we are analyzing, why is it meaningful
-                    <br>
-                    Steam
-                    <br>
-                    Epic Games
-                    <br>
-                    Xbox Games
+            <div id="references">
+                <img src="Image/MarketShare.jpg" style="width: 65vw; height: 500px;">   
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Game platforms are digital distribution services where players can purchase, download, and launch games. 
+                These platforms often provide additional services such as multiplayer matchmaking, game updates, achievements, social features, and digital rights management (DRM).
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;In this analysis, we are focusing on these three major PC game platforms
+                    <li>Steam is the largest and most established platform, known for its vast library, community features, and frequent sales.</li>
+                    <li>Epic Games Store is a newer competitor that differentiates itself with exclusive titles and free weekly game offerings.</li>
+                    <li>Xbox Games on PC refers to Microsoft's presence in PC gaming offering access to a wide range of games for a subscription fee.</li>
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;By comparing potential benefits and reducing future costs, gamers can decide which Game platform to purchase a new game from 
                 </p>
+                
             </div>
             <div id="div1">
                 <h2>This class has 30 students</h2>
                 <p>Each black box represents an individual student in our <b>"Intro to Information Visualization"</b> class.</p>
             </div>
             <div id="div2">
-                <h2>Brown eyes</h2>
-                <p>More than <b>half</b> of the class has brown eyes!</p>
+                <h2>Community Size</h2>
+                <h3>Monthly Active User (MAU)</h3>
+                <p>Overall, steam does has the largest scale with the most monthly active user. 
+                        Epic Games ranked the second and Xbox is the last.</p>
+                <li>Better Multiplayer Experience</li>
+                <li>More User-Generated Content</li>
+                <li>Attracts More Developers => More games in the future</li>
+                <h3>User base growth</h3>
+                <p>Surprisingly, the user growth number for each year are similar across the three platforms.</p>
+                <p>But giving the large scale of steam, 
+                    epic games and xbox has a better user growth potential because they would have a higher percentage increasment.</p>
             </div>
             <div id="div3">
                 <h2>Blue eyes</h2>
@@ -51,10 +62,19 @@
                 <p>Only <b>one student</b> has green eyes!</p>
             </div>
             <div id="div5">
-                <h1>Credits</h1>
-                <p>Stephen MacNeil</p>
-                <p>Baron Watts</p>
-                <p>Russell Goldenberg</p>
+                <div id="references">
+                    <h1 class="center-align">References</h1>
+                    <li>https://www.visualcapitalist.com/video-game-industry-revenues-by-platform/</li>
+                    <li>https://www.statista.com</li>
+                    <li>https://steamdb.info/</li>
+                    <li>https://store.epicgames.com</li>
+                    <li>https://steamcommunity.com</li>
+                    <li>https://www.xbox.com/</li>
+                    <h1 class="center-align">Credits</h1>
+                    <p>Xu Jiang</p>
+                    <p>Gavin Mai</p>
+                    <p>Charlie Morgan</p>
+                </div>
             </div>
         </div>
     </div>
