--- a/index.html
+++ b/index.html
@@ -54,8 +54,18 @@
                     epic games and xbox has a better user growth potential because they would have a higher percentage increasment.</p>
             </div>
             <div id="div3">
-                <h2>Blue eyes</h2>
-                <p>About a <b>quarter</b> of the class has blue eyes!</p>
+                <h2>Future Cost Saving</h2>
+                <li>The number of game on sales in the 2022 summer sale.</li>
+                <li>The free games offerred in the entire 2022.</li>
+                <h3>Steam</h3>
+                <p>Steam also has the largest saling scale with the most games number on sales. 
+                    But it hardly gives away free games.</p>
+                <h3>Epic games</h3>
+                <p>Epic games is well known for its <b>FreeGames</b> Strategy, and therefore it has the most free games offering to gamers.</p>
+                <h3>Xbox games</h3>
+                <p>Xbox does a miserable job on the visualization. 
+                    With a subscription fee, it has lowest number of games on sale and lowest new game offerring.
+                    But its Game Pass with a subscription fee can let gamers play hundreds of games with a low instant cost.</p>
                 <button id="switch">Switch Graph</button>
                 <script>
                     let showingFirst = true;
@@ -73,8 +83,10 @@
                 </script>
             </div>
             <div id="div4">
-                <h2>Green eyes</h2>
-                <p>Only <b>one student</b> has green eyes!</p>
+                <div id="references">
+                    <h1 class="center-align">Conclusion</h1>
+                    <img src="Image/Conclusion.png" style="width: 65vw; height: 600px;">   
+                </div>
             </div>
             <div id="div5">
                 <div id="references">
