--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 
             </div>
             <div id="div1">
-                <h2>This class has 30 students</h2>
-                <p>Each black box represents an individual student in our <b>"Intro to Information Visualization"</b> class.</p>
+                <h2>Popular Games</h2>
+                <p>Often, games are judged by their visibility. Games that have great marketing seem to be much more impactpactful
+                    than they actually are. This graph showcases the sales of some of the most popular games as well as their impact as they age.
+                </p>
             </div>
             <div id="div2">
                 <h2>Community Size</h2>
