fixed spelling and grammar

--- a/index.html
+++ b/index.html
@@ -42,31 +42,29 @@
             </div>
             <div id="div2">
                 <h2>Community Size</h2>
-                <h3>Monthly Active User (MAU)</h3>
-                <p>Overall, steam does has the largest scale with the most monthly active user. 
-                        Epic Games ranked the second and Xbox is the last.</p>
+                <h3>Monthly Active Users (MAU)</h3>
+                <p>Overall, Steam has the largest scale with the most monthly active users. 
+                        Epic Games ranks second, and Xbox comes last.</p>
                 <li>Better Multiplayer Experience</li>
                 <li>More User-Generated Content</li>
                 <li>Attracts More Developers => More games in the future</li>
                 <h3>User base growth</h3>
-                <p>Surprisingly, the user growth number for each year are similar across the three platforms.</p>
-                <p>But giving the large scale of steam, 
-                    epic games and xbox has a better user growth potential because they would have a higher percentage increasment.</p>
+                <p>Surprisingly, the annual user growth numbers are similar across the three platforms.</p>
+                <p>But given Steam's large scale, Epic Games and Xbox have better user growth potential because they could have a higher percentage increase.</p>
             </div>
             <div id="div3">
-                <h2>Future Cost Saving</h2>
-                <li>The number of game on sales in the 2022 summer sale.</li>
-                <li>The free games offerred in the entire 2022.</li>
+                <h2>Future Cost Savings</h2>
+                <li>The number of games on sale in the 2022 summer sales event.</li>
+                <li>The number of free games offerred in 2022.</li>
                 <h3>Steam</h3>
-                <p>Steam also has the largest saling scale with the most games number on sales. 
-                    But it hardly gives away free games.</p>
-                <h3>Epic games</h3>
-                <p>Epic games is well known for its <b>FreeGames</b> Strategy, and therefore it has the most free games offering to gamers.</p>
+                <p>Steam also has the largest sales volume, offering the highest number of games on discount.
+                     However, it rarely gives away games for free.</p>
+                <h3>Epic Games</h3>
+                <p>Epic games is well known for its <b>FreeGames</b> Strategy, and therefore it has the most free games offered by far.</p>
                 <button id="switch">Free Games</button>
-                <h3>Xbox games</h3>
-                <p>Xbox does a miserable job on the visualization. 
-                    With a subscription fee, it has lowest number of games on sale and lowest new game offerring.
-                    But its Game Pass with a subscription fee can let gamers play hundreds of games with a low instant cost.</p>
+                <h3>Xbox Games</h3>
+                <p>Due to Xbox's subscription fee, it has the lowest number of games on sale and lowest new game offering.
+                    However, its Game Pass with the subscription fee can let gamers play hundreds of games with a low instant cost.</p>
                 <script>
                     window.showingFirst = true;
 
