--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="div3">
                 <h2>Future Cost Savings</h2>
                 <li>The number of games on sale in the 2022 summer sales event.</li>
-                <li>The number of free games offerred in 2022.</li>
+                <li>The number of free games offered in 2022.</li>
                 <h3>Steam</h3>
                 <p>Steam also has the largest sales volume, offering the highest number of games on discount.
                      However, it rarely gives away games for free.</p>
